--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/5537c73d06.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
  
 
     <title>Southwood Translations</title>
@@ -18,7 +19,7 @@
 <!--     <nav class="navbar sticky-top navbar-light bg-light">
       <a href="" class="navbar-brand"><i class="fas fa-globe-asia mr-2"></i>Southwood Translations</a>
     </nav> -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light p-0 pl-1">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top rounded p-0 pl-1">
         <a class="navbar-brand" href="#"><i class="fas fa-globe-asia mr-2"></i>Southwood Translations</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +32,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -39,17 +40,17 @@
             </ul>
             <ul class="navbar-nav navbar-right">
                 <li class="nav-item">
-                    <a href="" class="nav-link">Login<i class="fas fa-user-plus ml-2"></i></a>
+                    <a href="" class="nav-link">Login<i class="fas fa-user ml-2"></i></a>
                 </li>               
                 <li class="nav-item">
-                    <a href="" class="nav-link">Sign-Up<i class="fas fa-user ml-2"></i></a>
+                    <a href="" class="nav-link">Sign-Up<i class="fas fa-user-plus ml-2"></i></a>
                 </li>
             </ul>
             
         </div>
     </nav>
 
-    <section id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" style="height: 100vh;">
+    <section id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
       <div class= "container" id="hero">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h3>Your go-to source for Professional Korean/English Translations</h3>
@@ -57,6 +58,33 @@
         <a href="" class="btn btn-success mt-4">Start Now</a>
       </div>
     </section>
+
+    <div class="container">
+    <a name="about"><hr></a>
+    </div>
+
+    <section id="aboutMe" class="container" style="height: 100vh;">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="https://lh3.googleusercontent.com/tXn16yfAsMR_rattFPmHjbdALPvjKguV-EfcuT-eY35SA0Zxalt_VbXNamZK5392Yh0W7jSYOF5fJ2QbgExNF4WtxWiLawna_ya4nV2tM6C0UjsLLsovh2nRrMQ1A8ScN-HG8SZOgUoxFZyN3knYeE0ZOEeSIc-1pBhaiB5BucWLy8Co-FF0RFSP0rrGjDduQXU_rx39yZRTsbF1TkejYqGD4rPCv3GOY3e0xyf0LOP80Gx7_Fh_9aoMhDhTB1z8GyQVNbV8PH9ao9G-LkBWA3mA5aon2lBX7aWI6JqOzvhz5_38vBRfx6yakxoOBkLId5GqREMasn3AtRlT0HKywDJCQ2gf2fuTCw5aE5Pn9mOS81ZEWez0OLnE9tfbOIXPKAb3aLokm_iX9_eXpF_RwcDH9QBkC-0sz5D5ZqmlAE_ZcilijZRV2-8PVGEbWzHfJvBplXjwd6p8mVLbOlNPQEQEPEwLTYtXx18eVR6HBXBdiKyqIAVunEo8yhWvvzs2tNI_H_-0eIAni_JR7fZRGhmB6zp1vvYWyhTNjxcB90gtu0st1_rUaeC623kQDhRRVq_uAnKJBFjULv6BbF9D9-WwtkcIZfuoCUo7C_jocWAw6cJQJyt5f8GsQQu8R2wM0mnzmH5hEDuDeTSiMw2iBjvgm3EotZ1V=w666-h888-no" class="img-fluid">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2 ">
+           <h2 class="">About Me</h2>
+            <br>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="container">
+    <hr>
+    </div>
+
 
     <div class="container" id="clients">
       <p>What Clients are saying..</p>
