added text for about page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <!--     <nav class="navbar sticky-top navbar-light bg-light">
       <a href="" class="navbar-brand"><i class="fas fa-globe-asia mr-2"></i>Southwood Translations</a>
     </nav> -->
+    <a name="home"></a>
+
     <nav class="navbar navbar-expand-md navbar-light fixed-top rounded p-0 pl-1">
         <a class="navbar-brand" href="#"><i class="fas fa-globe-asia mr-2"></i>Southwood Translations</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -29,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
@@ -54,8 +56,8 @@
       <div class= "container" id="hero">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h3>Your go-to source for Professional Korean/English Translations</h3>
-        <a href="" class="btn btn-primary mt-4">More Information</a>
-        <a href="" class="btn btn-success mt-4">Start Now</a>
+        <a href="" class="btn btn-outline-muted mt-4 info" >More Information</a>
+        <a href="" class="btn btn-outline-muted mt-4 start" >Start Now</a>
       </div>
     </section>
 
@@ -66,17 +68,16 @@
     <section id="aboutMe" class="container" style="height: 100vh;">
       <div class="row justify-content-between align-items-center">
         <div class="col-md-6 order-2 order-md-1">
-          <img src="https://lh3.googleusercontent.com/tXn16yfAsMR_rattFPmHjbdALPvjKguV-EfcuT-eY35SA0Zxalt_VbXNamZK5392Yh0W7jSYOF5fJ2QbgExNF4WtxWiLawna_ya4nV2tM6C0UjsLLsovh2nRrMQ1A8ScN-HG8SZOgUoxFZyN3knYeE0ZOEeSIc-1pBhaiB5BucWLy8Co-FF0RFSP0rrGjDduQXU_rx39yZRTsbF1TkejYqGD4rPCv3GOY3e0xyf0LOP80Gx7_Fh_9aoMhDhTB1z8GyQVNbV8PH9ao9G-LkBWA3mA5aon2lBX7aWI6JqOzvhz5_38vBRfx6yakxoOBkLId5GqREMasn3AtRlT0HKywDJCQ2gf2fuTCw5aE5Pn9mOS81ZEWez0OLnE9tfbOIXPKAb3aLokm_iX9_eXpF_RwcDH9QBkC-0sz5D5ZqmlAE_ZcilijZRV2-8PVGEbWzHfJvBplXjwd6p8mVLbOlNPQEQEPEwLTYtXx18eVR6HBXBdiKyqIAVunEo8yhWvvzs2tNI_H_-0eIAni_JR7fZRGhmB6zp1vvYWyhTNjxcB90gtu0st1_rUaeC623kQDhRRVq_uAnKJBFjULv6BbF9D9-WwtkcIZfuoCUo7C_jocWAw6cJQJyt5f8GsQQu8R2wM0mnzmH5hEDuDeTSiMw2iBjvgm3EotZ1V=w666-h888-no" class="img-fluid">
+          <img src="haemin.jpg" class="img-fluid">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2 ">
-           <h2 class="">About Me</h2>
-            <br>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="row justify-content-center">
+            <div class="col-10, col-lg-8">
+               
+               <br>
+                <p class="lead">Hi I'm Haemin. I am a Native Korean translator currently based in Ontario, Canada and I want to be your translator! <br><br> I write fluently, and in a culturally appropriate manner in both Korean and English. I also work very closely with an Native English editor to ensure quality on translation to English projects. I can translate up to 100,000 words per month for any project you might have. <br><br> For a more full and detailed look at my work experience, please refer to the section below and also take some time to read all the reviews from satisfied clients!</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -85,9 +86,8 @@
     <hr>
     </div>
 
-
     <div class="container" id="clients">
-      <p>What Clients are saying..</p>
+      <p>What Clients are saying...</p>
     </div>
 
     <section id="gallery">
@@ -100,7 +100,8 @@
                 <blockquote class="blockquote">
                   <p class="mb-0">Haemin is one of the sweetest and yet professional linguists I've worked with and it is always a pleasure!</p>
                   <footer class="blockquote-footer">Anita from <cite title="Source Title">EasyTranslate</cite></footer>
-                </blockquote>
+                 </blockquote>
+                 <br>
                 <a href="" class="btn btn-outline-success">Read More</a>
                 <a href="" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
               </div>
@@ -114,6 +115,7 @@
                   <p class="mb-0">A great translator: helpful, friendly, speedy, good communication, competitive rates. All you could ask for in a translator!</p>
                   <footer class="blockquote-footer">Oliver from <cite title="Source Title">Certified Translations</cite></footer>
                 </blockquote>
+                <br> 
                 <a href="" class="btn btn-outline-success">Read More</a>
                 <a href="" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
               </div>
@@ -124,8 +126,8 @@
               <img class="card-img-top" src="https://media.istockphoto.com/photos/professional-business-woman-smiling-outdoor-picture-id480440376?k=6&m=480440376&s=612x612&w=0&h=YYb_EI828x58XdTTUYONp7jN48l9CBllVLHJRFi0Al0=" >
               <div class="card-body">
                 <blockquote class="blockquote">
-                  <p class="mb-0">Great communication, delivery always on time, high professionalism and willingness. I recommend her services.</p>
-                  <footer class="blockquote-footer">Monika from <cite title="Source Title">Jonckers Translations & Engineers</cite></footer>
+                  <p class="mb-0 r">Great communication, delivery always on time, high professionalism and willingness. I recommend her services.</p>
+                  <footer class="blockquote-footer">Monika from <cite title="Source Title">Jonckers Translations & Engineering</cite></footer>
                 </blockquote>
                 <a href="" class="btn btn-outline-success">Read More</a>
                 <a href="" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
