--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <section id="aboutMe" class="container" style="height: 100vh;">
       <div class="row justify-content-between align-items-center">
-        <div class="col-md-6 order-2 order-md-1">
+        <div class="col-md-6 order-2 order-md-1 d-none d-lg-block">
           <img src="haemin.jpg" class="img-fluid">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2 ">
