--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
  
 
-    <title>Southwood Translations Test</title>
+    <title>Southwood Translations</title>
   </head>
   <body>
 <!--     <nav class="navbar sticky-top navbar-light bg-light">
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="mailto:hmin.park1@gmail.com.com">Contact</a>
                 </li>
             </ul>
             <ul class="navbar-nav navbar-right">
@@ -56,8 +56,8 @@
       <div class= "container" id="hero">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h3>Your go-to source for Professional Korean/English Translations</h3>
-        <a href="" class="btn btn-outline-muted mt-4 info" >More Information</a>
-        <a href="" class="btn btn-outline-muted mt-4 start" >Start Now</a>
+        <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" >More Information</a>
+        <a href="https://www.proz.com/?sp=mailsend&eid_s=2469809" class="btn btn-outline-muted mt-4 start" >Start Now</a>
       </div>
     </section>
 
