--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand" href="#"><i class="fas fa-globe-asia mr-2"></i>Translations By Haemin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span style="border: none" class="navbar-toggler-icon"></span>
         </button>
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
