--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  href="style.css">
-    <link rel="stylesheet" type="text/css" href="animate.compat.css">
+    <link rel="stylesheet" type="text/css"  href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.compat.css">
     <script src="https://kit.fontawesome.com/5537c73d06.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
@@ -52,7 +52,7 @@
 
     <section id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
       <div class= "container" id="hero">
-        <h1 class="display-3 font-weight-bold wow slideInDown">Haemin Park</h1>
+        <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h3>Your go-to source for Professional Korean/English Translations</h3>
         <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" >More Information</a>
         <a href="https://www.proz.com/?sp=mailsend&eid_s=2469809" class="btn btn-outline-muted mt-4 start" >Start Now</a>
@@ -84,12 +84,12 @@
         <hr>
     </div>
 
-    <div class="container wow pulse" id="clients">
+    <div class="container" id="clients">
       <p>What Clients are saying...</p>
     </div>
 
     <section id="gallery">
-        <div class="container">
+        <div class="container wow fadeInUp">
             <div class="row">
                 <div class="col-lg-4 mb-4" >
                     <div class="card h-100">
@@ -139,7 +139,7 @@
             <hr>
         </div>
 
-        <div class="container wow pulse" id="clients">
+        <div class="container" id="clients">
             <p>My Experience...</p>
         </div>
         
