made WCAG compliant

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
             </ul>
             <ul class="navbar-nav navbar-right">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Login<i class="fas fa-user ml-2"></i></a>
+                    <span href="#" class="nav-link">Login<i class="fas fa-user ml-2"></i></span>
                 </li>               
             </ul> 
         </div>
     </nav>
 
     <section id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
-      <div class= "container" id="hero">
+      <div class= "container" id="hero" role="hero-text">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
-        <h3>Your go-to source for Professional Korean/English Translations</h3>
-        <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" >More Information</a>
-        <a href="https://www.proz.com/?sp=mailsend&eid_s=2469809" class="btn btn-outline-muted mt-4 start" >Start Now</a>
+        <h2>Your go-to source for Professional Korean/English Translations</h2>
+        <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" role="button" >More Information</a>
+        <a href="https://www.proz.com/?sp=mailsend&eid_s=2469809" class="btn btn-outline-muted mt-4 start" role="button" >Start Now</a>
       </div>
     </section>
 
@@ -93,42 +93,39 @@
             <div class="row">
                 <div class="col-lg-4 mb-4" >
                     <div class="card h-100">
-                        <img class="card-img-top" src="https://freedesignfile.com/upload/2017/10/Beautiful-professional-women-Stock-Photo.jpg" >
+                        <img class="card-img-top" src="https://freedesignfile.com/upload/2017/10/Beautiful-professional-women-Stock-Photo.jpg" alt="Stock Woman Smiling" >
                         <div class="card-body">
                             <blockquote class="blockquote">
                                 <p class="mb-0">Haemin is one of the sweetest and yet professional linguists I've worked with and it is always a pleasure!</p>
                                 <footer class="blockquote-footer">Anita from <cite title="Source Title">EasyTranslate</cite></footer>
                             </blockquote>
                             <br>
-                            <a href="https://www.proz.com/feedback-card/2469809" class="btn btn-outline-success">Read More</a>
-                            <a href="#" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
+                            <a href="https://www.proz.com/feedback-card/2469809" class="btn btn-outline-success" role="button">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4" >
                     <div class="card h-100">
-                        <img class="card-img-top" src="https://g.foolcdn.com/editorial/images/490235/smiling-professionally-dressed-man_gettyimages-825082848.jpg" >
+                        <img class="card-img-top" src="https://g.foolcdn.com/editorial/images/490235/smiling-professionally-dressed-man_gettyimages-825082848.jpg" alt="Stock Professional Man" >
                         <div class="card-body">
                             <blockquote class="blockquote">
                                 <p class="mb-0">A great translator: helpful, friendly, speedy, good communication, competitive rates. All you could ask for in a translator!</p>
                                 <footer class="blockquote-footer">Oliver from <cite title="Source Title">Certified Translations</cite></footer>
                             </blockquote>
                         <br> 
-                        <a href="https://www.proz.com/feedback-card/2469809" class="btn btn-outline-success">Read More</a>
-                        <a href="#" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
+                        <a href="https://www.proz.com/feedback-card/2469809" class="btn btn-outline-success" role="button">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4" >
                 <div class="card h-100">
-                    <img class="card-img-top" src="https://media.istockphoto.com/photos/professional-business-woman-smiling-outdoor-picture-id480440376?k=6&m=480440376&s=612x612&w=0&h=YYb_EI828x58XdTTUYONp7jN48l9CBllVLHJRFi0Al0=" >
+                    <img class="card-img-top" src="https://media.istockphoto.com/photos/professional-business-woman-smiling-outdoor-picture-id480440376?k=6&m=480440376&s=612x612&w=0&h=YYb_EI828x58XdTTUYONp7jN48l9CBllVLHJRFi0Al0=" alt="Stock Woman Smiling" >
                         <div class="card-body">
                             <blockquote class="blockquote">
                                 <p class="mb-0 r">Great communication, delivery always on time, high professionalism and willingness. I recommend her services.</p>
                                 <footer class="blockquote-footer">Monika from <cite title="Source Title">Jonckers Translations & Engineering</cite></footer>
                             </blockquote>
-                        <a href="https://www.proz.com/feedback-card/2469809" class="btn btn-outline-success">Read More</a>
-                        <a href="#" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
+                        <a href="https://www.proz.com/feedback-card/2469809" class="btn btn-outline-success" role="button">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -144,25 +141,25 @@
         </div>
         
         <div class="container">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" aria-label="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4" tabindex="0" ></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="6" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="7" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="8" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="9" tabindex="0"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="10" tabindex="0"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="card bg-light" style="width: 100%;">
                             <div class="card-body">
-                                <h5 class="card-title">Marketing</h5>
+                                <h2 class="card-title">Marketing</h2>
                                 <ul>
                                     <li class="card-text">AT&T – DirecTV International – Website localization</li>
                                     <li class="card-text">Ford – BuyFordNow – Image translation</li>
@@ -183,7 +180,7 @@
                     <div class="carousel-item">
                         <div class="card" style="width: 100%;">
                             <div class="card-body bg-light">
-                                <h5 class="card-title">IT & Games</h5>
+                                <h2 class="card-title">IT & Games</h2>
                                 <ul>
                                     <li class="card-text">Google – Master GNI Course, AMP website localization *Over 50,000 words translated</li>
                                     <li class="card-text">Samsung – SSIC (Samsung Strategy and Innovation Center) – Website localization</li>
@@ -213,7 +210,7 @@
                     <div class="carousel-item">
                         <div class="card" style="width: 100%;">
                             <div class="card-body bg-light">
-                                <h5 class="card-title">Business & Finance</h5>
+                                <h2 class="card-title">Business & Finance</h2>
                                 <ul>
                                     <li class="card-text">Nissan – Car lease financial document</li>
                                     <li class="card-text">Amazon Tax – Corporate tax manual</li>
@@ -243,7 +240,7 @@
                     <div class="carousel-item">
                         <div class="card" style="width: 100%;">
                             <div class="card-body bg-light">
-                                <h5 class="card-title">Medical & Life Science</h5>
+                                <h2 class="card-title">Medical & Life Science</h2>
                                 <ul>
                                     <li class="card-text">Korea Ministry of Food and Drug Safety – Positive list of synthetic flavoring substances</li>
                                     <li class="card-text">CDC – Covid-19 informational articles *Over 50,000 words translated</li>
@@ -265,7 +262,7 @@
                     <div class="carousel-item">
                         <div class="card" style="width: 100%;">
                             <div class="card-body bg-light">
-                                <h5 class="card-title">Media & Journalism</h5>
+                                <h2 class="card-title">Media & Journalism</h2>
                                 <ul>
                                     <li class="card-text">2020 Winter Youth Olympic – Athletes interviews & press release *Over 50,000 words translated</li>
                                     <li class="card-text">FIFA World Cup 2018 – Player/manager interviews</li>
@@ -280,7 +277,7 @@
                     <div class="carousel-item">
                         <div class="card" style="width: 100%;">
                             <div class="card-body bg-light">
-                                <h5 class="card-title">Tourism & Hospitality</h5>
+                                <h2 class="card-title">Tourism & Hospitality</h2>
                                 <ul>
                                     <li class="card-text">Agoda – Language-specific analysis of the Agoda website</li>
                                     <li class="card-text">American Express Travel – "Live the World" promotion transcreation</li>
@@ -304,7 +301,7 @@
                 <div class="carousel-item">
                     <div class="card" style="width: 100%; ">
                         <div class="card-body bg-light">
-                            <h5 class="card-title">Education & Pedagogy</h5>
+                            <h2 class="card-title">Education & Pedagogy</h2>
                             <ul>
                                 <li class="card-text">Walnut Hill School for the Arts – Parents guide, Head of school update, etc.</li>
                                 <li class="card-text">Wrentham Public Schools – SBRC (Standards-Based Report Card) guide</li>
@@ -319,7 +316,7 @@
                 <div class="carousel-item">
                     <div class="card" style="width: 100%;">
                         <div class="card-body bg-light">
-                            <h5 class="card-title">Engineering</h5>
+                            <h2 class="card-title">Engineering</h2>
                             <ul>
                                 <li class="card-text">Fuji Xerox – Manual for ApeosPort VII C7788 / DocuCentre VII C7788</li>
                                 <li class="card-text">Boyd Corporation – Website localization *Over 100,000 words translated</li>
@@ -333,7 +330,7 @@
                 <div class="carousel-item">
                     <div class="card" style="width: 100%;">
                         <div class="card-body bg-light">
-                            <h5 class="card-title">Fashion</h5>
+                            <h2 class="card-title">Fashion</h2>
                             <ul>
                                 <li class="card-text">MatchesFashion.com: Fendi, Max Mara, Mary Katrantzou, Balenciaga, Oscar de la Renta, Hermes, Berluti, Isabel Marant, Burberry, Moncler and more – Transcreation of category descriptions</li>
                                 <li class="card-text">Chloé, Prada, Valentino, Lemaire, Givenchy, Raey, Bottega Veneta, Rochas, Malone Souliers and more – Item descriptions *Over 200,000 words translated</li>
@@ -347,7 +344,7 @@
                 <div class="carousel-item">
                     <div class="card" style="width: 100%;">
                         <div class="card-body bg-light">
-                            <h5 class="card-title">Legal</h5>
+                            <h2 class="card-title">Legal</h2>
                             <ul>
                                 <li class="card-text">Document translations: Family register, Marriage certificate, Driver’s license</li>
                                 <li class="card-text">Alberta Workers’ Compensation Board – Insurance settlement notification</li>
