made WCAG compliant

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <title>Translations by Haemin</title>
   </head>
   <body>
-  <a name="home"></a>
+    <a href="#aboutMe" aria-label="Hidden link to main content" style="display:none">Hidden Link</a>      
+    <a name="home"></a>
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top rounded p-0 pl-1">
         <a class="navbar-brand" href="#"><i class="fas fa-globe-asia mr-2"></i>Translations By Haemin</a>
@@ -33,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home" aria-label="Home Section" >Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="#about" aria-label="Home Section">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="mailto:hmin.park1@gmail.com.com">Contact</a>
@@ -51,7 +52,7 @@
     </nav>
 
     <section id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
-      <div class= "container" id="hero" role="hero-text">
+      <div class= "container" id="hero" role="contentinfo" aria-label="Name and Brief Description">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h2>Your go-to source for Professional Korean/English Translations</h2>
         <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" role="button" >More Information</a>
@@ -66,7 +67,7 @@
     <section id="aboutMe" class="container" style="height: 100vh;">
       <div class="row justify-content-between align-items-center">
         <div class="col-md-6 order-2 order-md-1 d-none d-lg-block wow fadeIn" data-wow-duration="3s">
-          <img src="./img/haemin.jpg" class="img-fluid">
+          <img src="./img/haemin.jpg" class="img-fluid" alt="Picture of Haemin">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2 ">
           <div class="row justify-content-center">
@@ -141,7 +142,7 @@
         </div>
         
         <div class="container">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" aria-label="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" aria-label="carousel" role="contentinfo">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" tabindex="0"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1" tabindex="0"></li>
