made WCAG compliant

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Translations by Haemin</title>
   </head>
   <body>
-    <a href="#aboutMe" aria-label="Hidden link to main content" style="display:none">Hidden Link</a>      
+    <a href="#maincontent" aria-label="Hidden link to main content" style="display:none">Hidden Link</a>      
     <a name="home"></a>
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top rounded p-0 pl-1">
@@ -51,20 +51,20 @@
         </div>
     </nav>
 
-    <section id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
+    <header id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
       <div class= "container" id="hero" role="contentinfo" aria-label="Name and Brief Description">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h2>Your go-to source for Professional Korean/English Translations</h2>
         <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" role="button" >More Information</a>
         <a href="https://www.proz.com/?sp=mailsend&eid_s=2469809" class="btn btn-outline-muted mt-4 start" role="button" >Start Now</a>
       </div>
-    </section>
+    </header>
 
     <div class="container">
     <a name="about"><hr></a>
     </div>
 
-    <section id="aboutMe" class="container" style="height: 100vh;">
+    <main id="aboutMe maincontent" class="container" style="height: 100vh;">
       <div class="row justify-content-between align-items-center">
         <div class="col-md-6 order-2 order-md-1 d-none d-lg-block wow fadeIn" data-wow-duration="3s">
           <img src="./img/haemin.jpg" class="img-fluid" alt="Picture of Haemin">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </main>
 
     <div class="container">
         <hr>
@@ -89,7 +89,7 @@
       <p>What Clients are saying...</p>
     </div>
 
-    <section id="gallery">
+    <aside id="gallery">
         <div class="container wow fadeInUp">
             <div class="row">
                 <div class="col-lg-4 mb-4" >
@@ -383,7 +383,7 @@
             </footer>
         </body>        
 
-    </section>
+    </aside>
     
 
 
