--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#home" aria-label="Home Section" >Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" aria-label="Home Section">About</a>
+                    <a class="nav-link" href="#about" aria-label="About Section">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="mailto:hmin.park1@gmail.com.com">Contact</a>
