made WCAG compliant

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         </div>
     </nav>
 
-    <header id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" ">
+    <div id="header" class="jumbotron text-center d-flex flex-row justify-content-center align-items-center" aria-label="header">
       <div class= "container" id="hero" role="contentinfo" aria-label="Name and Brief Description">
         <h1 class="display-3 font-weight-bold">Haemin Park</h1>
         <h2>Your go-to source for Professional Korean/English Translations</h2>
         <a href="https://www.proz.com/profile/2469809" class="btn btn-outline-muted mt-4 info" role="button" >More Information</a>
         <a href="https://www.proz.com/?sp=mailsend&eid_s=2469809" class="btn btn-outline-muted mt-4 start" role="button" >Start Now</a>
       </div>
-    </header>
+    </div>
 
     <div class="container">
     <a name="about"><hr></a>
