--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <title>Translations by Haemin</title>
   </head>
   <body>
-      
-  <a name="home"></a>
+
+
+  <a name="home" aria-label="Home Section Begins"></a>
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top rounded p-0 pl-1">
         <a class="navbar-brand" href="#"><i class="fas fa-globe-asia mr-2"></i>Translations By Haemin</a>
@@ -34,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#home" aria-label="Home Section" >Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home" aria-label="Home Section">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#about" aria-label="About Section">About</a>
@@ -61,13 +62,14 @@
     </section>
 
     <div class="container">
-    <a name="about"><hr></a>
+    <a name="about" aria-label="About Section Begins"><hr></a>
     </div>
 
-    <main id="aboutMe" class="container" style="height: 100vh;">
-      <div class="row justify-content-between align-items-center">
+    <main id="aboutMe" name="maincontent" class="container" style="height: 100vh;" aria-label="about me">
+        <a name="maincontent" aria-label="Main Section Begins"><hr></a>
+        <div class="row justify-content-between align-items-center">
         <div class="col-md-6 order-2 order-md-1 d-none d-lg-block wow fadeIn" data-wow-duration="3s">
-          <img src="./img/haemin.jpg" class="img-fluid" alt="Picture of Haemin">
+            <img src="./img/haemin.jpg" class="img-fluid" alt="Picture of Haemin">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2 ">
           <div class="row justify-content-center">
