made WCAG compliant

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         
         <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" aria-label="carousel" role="contentinfo">
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators" aria-label="carousel" role="contentinfo">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" tabindex="0"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1" tabindex="0"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2" tabindex="0"></li>
@@ -159,7 +159,7 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="10" tabindex="0"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active" >
                         <div class="card bg-light" style="width: 100%;">
                             <div class="card-body">
                                 <h2 class="card-title">Marketing</h2>
